# dashboard-rs

./: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html  package-lock.json  package.json  rust-toolchain.toml  snapcraft.yaml  tailwind.config.js
.cargo/: config.toml
.github/workflows/: devskim.yml  rust-clippy.yml  rust.yml
components/: Cargo.toml
components/src/: align.rs  class_name.rs  colour.rs  common.rs  lib.rs  orientation.rs  responsive.rs  size.rs  style.rs  typography.rs
components/src/actions/: button.rs  dropdown.rs  mod.rs  modal.rs  swap.rs
components/src/data_display/: alert.rs  badge.rs  card.rs  carousel.rs  chat.rs  collapse.rs  countdown.rs  keyboard.rs  loading.rs  mod.rs  progress.rs  radial_progress.rs  stat.rs  tooltip.rs
components/src/input/: form_control.rs  mod.rs
components/src/layout/: artboard.rs  divider.rs  drawer.rs  footer.rs  hero.rs  indicator.rs  join.rs  mask.rs  mod.rs  stack.rs  toast.rs
components/src/mockup/: browser.rs  code.rs  mod.rs  phone.rs  window.rs
components/src/navigation/: bottom_navigation.rs  breadcrumbs.rs  link.rs  menu.rs  mod.rs  navbar.rs  step.rs  tab.rs
components/tests/: alert.rs  badge.rs  button.rs  card.rs  carousel.rs  chat.rs  collapse.rs  countdown.rs  dropdown.rs  keyboard.rs  loading.rs  modal.rs  progress.rs  radial_progress.rs  swap.rs
snap/: snapcraft.yaml
src/: app.rs  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
