[package]
name = "dashboard-ui"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/Cethric/dashboard-rs"

[dependencies]
leptos = { version = "0.5", features = ["csr", "nightly"] }
leptos_icons = { version = "0.0.15", features = ["serde", "macros", "BsGithub", "BsPower", "BsHouseDoor", "LuBed", "RiKnifeBloodOthersLine", "RiComputerDeviceLine", "LuShirt", "ImSpoonKnife", "LuSofa", "BsLamp"] }
leptos-use = { version = "0.6", features = ["serde"] }
leptos_router = { version = "0.4", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.5", features = [] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize", "serde"] }
wasm-bindgen-futures = { version = "0.4", features = [] }
js-sys = { version = "0.3", features = [] }
console_error_panic_hook = { version = "0.1", features = [] }
console_log = { version = "1.0", features = ["color", "wasm-bindgen"] }
log = { version = "0.4", features = ["serde"] }
components = { version = "0.1.0", path = "./components", features = [] }
chrono = { version = "0.4", features = ["serde", "wasmbind", "default"] }

[workspace]
members = ["src-tauri", "components"]
