[package]
name = "dashboard-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = "https://github.com/Cethric/dashboard-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = ["default", "devtools"] }
serde = { version = "1.0", features = ["derive", "default"] }
serde_json = {version = "1.0", features = ["default"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
